Generate Pelican site

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="/authors.html" />
+    <link rel="canonical" href="/pages/about-me.html" />
 
-    <title>  Gabi Surita &mdash; Authors
+    <title>  Gabi Surita &mdash; About Me
 </title>
 
 
@@ -20,6 +20,10 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+
+    <meta name="author" content="Gabriela Surita">
+    <meta name="description" content="Who am I? Hi! I'm a last year computer engineering student at University of Campinas (Unicamp). I'm currently working as an internship at Mozilla on Outreachy. The project I'm most involved it's called Kinto, which is a REST HTTP database interface with sharing and syncing capabilities ...">
+  <meta name="tags" contents="">
 </head>
 
 <body>
@@ -44,10 +48,21 @@
     </div>
   </div>
 </header> <!-- /.header -->  <div class="container">
-  <h1>Authors on Gabi Surita</h1>
-  <ul class="list-unstyled">
-      <li><a href="/author/gabriela-surita.html">Gabriela Surita</a> (1)</li>
-  </ul>
+  <div class="page">
+    <h1 class="title">About Me</h1>
+    <div class="content">
+      <div class="section" id="who-am-i">
+<h2>Who am I?</h2>
+<p>Hi! I'm a last year computer engineering student at University of Campinas (Unicamp).
+I'm currently working as an internship at Mozilla on Outreachy.</p>
+<p>The project I'm most involved it's called Kinto, which is a REST HTTP database interface
+with sharing and syncing capabilities.</p>
+<p>My previous work experience involves hardware and machine learning. My curriculum will soon
+be available at this page.</p>
+</div>
+
+    </div>
+  </div>
   </div>
 <footer class="footer">
   <div class="container">
