Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -46,7 +46,7 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
-      <dt>Qua 07 dezembro 2016</dt>
+      <dt>Wed 07 December 2016</dt>
       <dd><a href="/first.html">Just starting</a></dd>
   </dl>
   </div>
