--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -54,11 +54,11 @@
       <div class="section" id="who-am-i">
 <h2>Who am I?</h2>
 <p>Hi! I'm a last year computer engineering student at University of Campinas (Unicamp).
-I'm currently working as an internship at Mozilla on Outreachy.</p>
-<p>The project I'm most involved it's called Kinto, which is a REST HTTP database interface
-with sharing and syncing capabilities.</p>
-<p>My previous work experience involves hardware and machine learning. My curriculum will soon
-be available at this page.</p>
+I'm currently working as an internship at Mozilla on Outreachy.
+The project I'm most involved it's called Kinto, which is a REST HTTP database interface
+with sharing and syncing capabilities.
+My previous work experience involves hardware and machine learning.
+My curriculum will soon be available at this page.</p>
 </div>
 
     </div>
