--- a/archives.html
+++ b/archives.html
@@ -26,7 +26,7 @@
 <header class="header">
   <div class="container">
       <div class="header-image pull-left">
-        <a class="nodec" href=""><img src=/theme/img/prof-150x150.jpg></a>
+        <a class="nodec" href=""><img src=/theme/img/prof3-150x150.jpg></a>
       </div>
     <div class="header-inner">
       <h1 class="header-name">
@@ -46,7 +46,7 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
-      <dt>Wed 07 December 2016</dt>
+      <dt>Qua 07 dezembro 2016</dt>
       <dd><a href="/first.html">Just starting</a></dd>
   </dl>
   </div>
