--- a/categories.html
+++ b/categories.html
@@ -26,7 +26,7 @@
 <header class="header">
   <div class="container">
       <div class="header-image pull-left">
-        <a class="nodec" href=""><img src=/theme/img/prof3-150x150.jpg></a>
+        <a class="nodec" href=""><img src=/theme/img/prof-150x150.jpg></a>
       </div>
     <div class="header-inner">
       <h1 class="header-name">
@@ -46,7 +46,7 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Categories on Gabi Surita</h1>
   <ul class="list-unstyled">
-      <li><a href="/category/outreachy.html">Outreachy</a></li>
+      <li><a href="/category/outreachy-etc.html">Outreachy, Etc</a></li>
   </ul>
   </div>
 <footer class="footer">
