Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -46,7 +46,7 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Categories on Gabi Surita</h1>
   <ul class="list-unstyled">
-      <li><a href="/category/outreachy-etc.html">Outreachy, Etc</a></li>
+      <li><a href="/category/outreachy.html">Outreachy</a></li>
   </ul>
   </div>
 <footer class="footer">
