--- a/archives.html
+++ b/archives.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="/archives.html" />
+    <link rel="canonical" href="./archives.html" />
 
     <title>  Gabi Surita &mdash; Archives
 </title>
@@ -13,7 +13,7 @@
 
 
 
-    <link rel="stylesheet" href="/theme/css/style.css">
+    <link rel="stylesheet" href="./theme/css/style.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -26,16 +26,16 @@
 <header class="header">
   <div class="container">
       <div class="header-image pull-left">
-        <a class="nodec" href=""><img src=/theme/img/prof-150x150.jpg></a>
+        <a class="nodec" href="."><img src=/theme/img/prof-150x150.jpg></a>
       </div>
     <div class="header-inner">
       <h1 class="header-name">
-        <a class="nodec" href="">Gabi Surita</a>
+        <a class="nodec" href=".">Gabi Surita</a>
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
               <li class="muted">|</li>
-            <li><a class="nodec" href="/pages/about-me.html">About Me</a></li>
+            <li><a class="nodec" href="./pages/about-me.html">About Me</a></li>
               <li class="muted">|</li>
           <li><a class="nodec icon-mail-alt" href="mailto:gsurita@mozilla.com"></a></li>
           <li><a class="nodec icon-github" href="https://github.com/gabisurita"></a></li>
@@ -47,7 +47,7 @@
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
       <dt>Qua 07 dezembro 2016</dt>
-      <dd><a href="/first.html">Just starting</a></dd>
+      <dd><a href="./first.html">Just starting</a></dd>
   </dl>
   </div>
 <footer class="footer">
@@ -60,8 +60,8 @@
     </div>
   </div>
 </footer> <!-- /.footer -->
-  <script src="/theme/js/jquery.min.js"></script>
-  <script src="/theme/js/bootstrap.min.js"></script>
+  <script src="./theme/js/jquery.min.js"></script>
+  <script src="./theme/js/bootstrap.min.js"></script>
 </body> <!-- 42 -->
 
 </html>
