--- a/authors.html
+++ b/authors.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="/authors.html" />
+    <link rel="canonical" href="./authors.html" />
 
     <title>  Gabi Surita &mdash; Authors
 </title>
@@ -13,7 +13,7 @@
 
 
 
-    <link rel="stylesheet" href="/theme/css/style.css">
+    <link rel="stylesheet" href="./theme/css/style.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -26,16 +26,16 @@
 <header class="header">
   <div class="container">
       <div class="header-image pull-left">
-        <a class="nodec" href=""><img src=/theme/img/prof-150x150.jpg></a>
+        <a class="nodec" href="."><img src=/theme/img/prof-150x150.jpg></a>
       </div>
     <div class="header-inner">
       <h1 class="header-name">
-        <a class="nodec" href="">Gabi Surita</a>
+        <a class="nodec" href=".">Gabi Surita</a>
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
               <li class="muted">|</li>
-            <li><a class="nodec" href="/pages/about-me.html">About Me</a></li>
+            <li><a class="nodec" href="./pages/about-me.html">About Me</a></li>
               <li class="muted">|</li>
           <li><a class="nodec icon-mail-alt" href="mailto:gsurita@mozilla.com"></a></li>
           <li><a class="nodec icon-github" href="https://github.com/gabisurita"></a></li>
@@ -46,7 +46,7 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Authors on Gabi Surita</h1>
   <ul class="list-unstyled">
-      <li><a href="/author/gabriela-surita.html">Gabriela Surita</a> (1)</li>
+      <li><a href="./author/gabriela-surita.html">Gabriela Surita</a> (1)</li>
   </ul>
   </div>
 <footer class="footer">
@@ -59,8 +59,8 @@
     </div>
   </div>
 </footer> <!-- /.footer -->
-  <script src="/theme/js/jquery.min.js"></script>
-  <script src="/theme/js/bootstrap.min.js"></script>
+  <script src="./theme/js/jquery.min.js"></script>
+  <script src="./theme/js/bootstrap.min.js"></script>
 </body> <!-- 42 -->
 
 </html>
