Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -46,6 +46,8 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
+      <dt>Sex 09 dezembro 2016</dt>
+      <dd><a href="./openapi-logic-validation.html">Testing an OpenAPI Spec with Bravado</a></dd>
       <dt>Qua 07 dezembro 2016</dt>
       <dd><a href="./first.html">Just starting</a></dd>
   </dl>
