--- a/categories.html
+++ b/categories.html
@@ -46,6 +46,7 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Categories on Gabi Surita</h1>
   <ul class="list-unstyled">
+      <li><a href="./category/openapi.html">OpenAPI</a></li>
       <li><a href="./category/outreachy.html">Outreachy</a></li>
   </ul>
   </div>
