--- a/tags.html
+++ b/tags.html
@@ -46,7 +46,12 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Tags on Gabi Surita</h1>
   <ul class="list-unstyled">
+      <li><a href="./tag/bravado.html">Bravado</a> (1)</li>
+      <li><a href="./tag/openapi.html">OpenAPI</a> (1)</li>
       <li><a href="./tag/outreachy.html">outreachy</a> (1)</li>
+      <li><a href="./tag/python.html">Python</a> (1)</li>
+      <li><a href="./tag/swagger.html">Swagger</a> (1)</li>
+      <li><a href="./tag/testing.html">Testing</a> (1)</li>
   </ul>
   </div>
 <footer class="footer">
