--- a/resume.html
+++ b/resume.html
@@ -2,14 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=http://example.com">
+        <meta http-equiv="refresh" content="1;url=https://registry.jsonresume.org/05005aa0">
         <script type="text/javascript">
-            window.location.href = "http://example.com"
+            window.location.href = "https://registry.jsonresume.org/05005aa0"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='http://example.com'>link to example</a>
+        If you are not redirected automatically, follow the <a href='https://registry.jsonresume.org/05005aa0'>link to example</a>
     </body>
 </html>
