Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -34,9 +34,6 @@
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
-              <li class="muted">|</li>
-            <li><a class="nodec" href="./pages/about-me.html">About Me</a></li>
-              <li class="muted">|</li>
           <li><a class="nodec icon-mail-alt" href="mailto:gsurita@mozilla.com"></a></li>
           <li><a class="nodec icon-github" href="https://github.com/gabisurita"></a></li>
           <li><a class="nodec icon-facebook" href="https://www.facebook.com/gabsurita"></a></li>
@@ -46,9 +43,11 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
-      <dt>Sex 09 dezembro 2016</dt>
+      <dt>Mon 19 December 2016</dt>
+      <dd><a href="./kinto-client-generation.html">Creating clients for Kinto using Swagger Codegen</a></dd>
+      <dt>Fri 09 December 2016</dt>
       <dd><a href="./openapi-logic-validation.html">Testing an OpenAPI Spec with Bravado</a></dd>
-      <dt>Qua 07 dezembro 2016</dt>
+      <dt>Wed 07 December 2016</dt>
       <dd><a href="./first.html">Just starting</a></dd>
   </dl>
   </div>
