--- a/categories.html
+++ b/categories.html
@@ -34,9 +34,6 @@
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
-              <li class="muted">|</li>
-            <li><a class="nodec" href="./pages/about-me.html">About Me</a></li>
-              <li class="muted">|</li>
           <li><a class="nodec icon-mail-alt" href="mailto:gsurita@mozilla.com"></a></li>
           <li><a class="nodec icon-github" href="https://github.com/gabisurita"></a></li>
           <li><a class="nodec icon-facebook" href="https://www.facebook.com/gabsurita"></a></li>
@@ -46,6 +43,7 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Categories on Gabi Surita</h1>
   <ul class="list-unstyled">
+      <li><a href="./category/kinto.html">Kinto</a></li>
       <li><a href="./category/openapi.html">OpenAPI</a></li>
       <li><a href="./category/outreachy.html">Outreachy</a></li>
   </ul>
