--- a/tags.html
+++ b/tags.html
@@ -34,9 +34,6 @@
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
-              <li class="muted">|</li>
-            <li><a class="nodec" href="./pages/about-me.html">About Me</a></li>
-              <li class="muted">|</li>
           <li><a class="nodec icon-mail-alt" href="mailto:gsurita@mozilla.com"></a></li>
           <li><a class="nodec icon-github" href="https://github.com/gabisurita"></a></li>
           <li><a class="nodec icon-facebook" href="https://www.facebook.com/gabsurita"></a></li>
@@ -47,10 +44,13 @@
   <h1>Tags on Gabi Surita</h1>
   <ul class="list-unstyled">
       <li><a href="./tag/bravado.html">Bravado</a> (1)</li>
-      <li><a href="./tag/openapi.html">OpenAPI</a> (1)</li>
-      <li><a href="./tag/outreachy.html">outreachy</a> (1)</li>
+      <li><a href="./tag/client-generation.html">Client Generation</a> (1)</li>
+      <li><a href="./tag/kinto.html">Kinto</a> (1)</li>
+      <li><a href="./tag/mozilla.html">Mozilla</a> (1)</li>
+      <li><a href="./tag/openapi.html">OpenAPI</a> (2)</li>
+      <li><a href="./tag/outreachy.html">Outreachy</a> (2)</li>
       <li><a href="./tag/python.html">Python</a> (1)</li>
-      <li><a href="./tag/swagger.html">Swagger</a> (1)</li>
+      <li><a href="./tag/swagger.html">Swagger</a> (2)</li>
       <li><a href="./tag/testing.html">Testing</a> (1)</li>
   </ul>
   </div>
