--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -22,7 +22,7 @@
 
 
     <meta name="author" content="Gabriela Surita">
-    <meta name="description" content="Who am I? Hi! I'm a last year computer engineering student at University of Campinas (Unicamp). I'm currently working as an internship at Mozilla on Outreachy. The project I'm most involved it's called Kinto, which is a REST HTTP database interface with sharing and syncing capabilities ...">
+    <meta name="description" content="Who am I? Hi! I'm a last year computer engineering student at University of Campinas (Unicamp). I'm currently working as an internship at Mozilla on Outreachy. The project I'm most involved it's called Kinto, which is a REST HTTP database interface with sharing and syncing capabilities. My previous work experience …">
   <meta name="tags" contents="">
 </head>
 
@@ -38,9 +38,6 @@
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
-              <li class="muted">|</li>
-            <li><a class="nodec" href="../pages/about-me.html">About Me</a></li>
-              <li class="muted">|</li>
           <li><a class="nodec icon-mail-alt" href="mailto:gsurita@mozilla.com"></a></li>
           <li><a class="nodec icon-github" href="https://github.com/gabisurita"></a></li>
           <li><a class="nodec icon-facebook" href="https://www.facebook.com/gabsurita"></a></li>
