--- a/tags.html
+++ b/tags.html
@@ -45,12 +45,13 @@
   <ul class="list-unstyled">
       <li><a href="./tag/bravado.html">Bravado</a> (1)</li>
       <li><a href="./tag/client-generation.html">Client Generation</a> (1)</li>
-      <li><a href="./tag/kinto.html">Kinto</a> (1)</li>
-      <li><a href="./tag/mozilla.html">Mozilla</a> (1)</li>
-      <li><a href="./tag/openapi.html">OpenAPI</a> (2)</li>
-      <li><a href="./tag/outreachy.html">Outreachy</a> (2)</li>
+      <li><a href="./tag/cornice.html">cornice</a> (1)</li>
+      <li><a href="./tag/kinto.html">Kinto</a> (2)</li>
+      <li><a href="./tag/mozilla.html">Mozilla</a> (2)</li>
+      <li><a href="./tag/openapi.html">OpenAPI</a> (3)</li>
+      <li><a href="./tag/outreachy.html">Outreachy</a> (3)</li>
       <li><a href="./tag/python.html">Python</a> (1)</li>
-      <li><a href="./tag/swagger.html">Swagger</a> (2)</li>
+      <li><a href="./tag/swagger.html">Swagger</a> (3)</li>
       <li><a href="./tag/testing.html">Testing</a> (1)</li>
   </ul>
   </div>
