Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -45,11 +45,12 @@
   <ul class="list-unstyled">
       <li><a href="./tag/bravado.html">Bravado</a> (1)</li>
       <li><a href="./tag/client-generation.html">Client Generation</a> (1)</li>
-      <li><a href="./tag/cornice.html">cornice</a> (1)</li>
+      <li><a href="./tag/cornice.html">Cornice</a> (2)</li>
+      <li><a href="./tag/free-software.html">Free Software</a> (1)</li>
       <li><a href="./tag/kinto.html">Kinto</a> (2)</li>
       <li><a href="./tag/mozilla.html">Mozilla</a> (2)</li>
       <li><a href="./tag/openapi.html">OpenAPI</a> (3)</li>
-      <li><a href="./tag/outreachy.html">Outreachy</a> (3)</li>
+      <li><a href="./tag/outreachy.html">Outreachy</a> (4)</li>
       <li><a href="./tag/python.html">Python</a> (1)</li>
       <li><a href="./tag/swagger.html">Swagger</a> (3)</li>
       <li><a href="./tag/testing.html">Testing</a> (1)</li>
