--- a/archives.html
+++ b/archives.html
@@ -43,6 +43,8 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
+      <dt>Wed 25 January 2017</dt>
+      <dd><a href="./quirky-foss.html">Go open when developing quirky</a></dd>
       <dt>Tue 10 January 2017</dt>
       <dd><a href="./self-documented-apis.html">Building self-documented APIs</a></dd>
       <dt>Mon 19 December 2016</dt>
